# ai-code-reviewer

./: README.md  action.yml  pyproject.toml  requirements.txt
.github/workflows/: docker-test.yml  test.yml
src/: github_client.py  main.py  prompts.py  reviewer.py
tests/: test_github_client.py  test_prompts.py  test_reviewer.py
