[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta:__legacy__"

[project]
name = "ai-code-reviewer"
version = "1.0.0"
description = "AI-powered code review for GitHub PRs"
requires-python = ">=3.9"
dependencies = [
    "PyGithub>=2.0.0",
    "openai>=1.0.0",
    "anthropic>=0.8.0",
    "requests>=2.28.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-mock>=3.10",
]

[tool.setuptools.packages.find]
include = ["src*"]
